--- a/package.json
+++ b/package.json
@@ -17,9 +17,26 @@
     "generate": "dfx generate userData_backend"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.1",
     "@dfinity/agent": "^0.19.3",
     "@dfinity/candid": "^0.19.3",
-    "@dfinity/principal": "^0.19.3"
+    "@dfinity/principal": "^0.19.3",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "css-loader": "^6.8.1",
+    "framer-motion": "^10.16.4",
+    "lit-html": "^3.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
+    "react-router-dom": "^6.17.0",
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.7.7",
+    "style-loader": "^3.3.3",
+    "ts-loader": "^9.5.0",
+    "url-loader": "^4.1.1",
+    "web-vitals": "^3.5.0"
   },
   "devDependencies": {
     "assert": "2.0.0",
